Update Russian strings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,7 +10,7 @@
     <string name="host">Главная ЭВМ</string>
     <string name="app_filter">Целевое приложение</string>
     <string name="ready">Готов</string>
-    <string name="about">О</string>
+    <string name="about">О приложении</string>
     <string name="status">Состояние</string>
     <string name="connections_view">Соединения</string>
     <string name="no_connections">Нет соединений</string>
@@ -33,16 +33,16 @@
     <string name="receiver_port">Порт сборщика</string>
     <string name="dump_mode">Режим записи</string>
     <string name="user_guide">Руководство пользователя</string>
-    <string name="open_telegram_group">Группа в Телеграме</string>
+    <string name="open_telegram_group">Telegram сообщество</string>
     <string name="source_code">Исходный код</string>
-    <string name="yes">ДА</string>
-    <string name="no">НЕТ</string>
-    <string name="vpn_setup_failed">Настройка VPN провалена</string>
-    <string name="app_not_found">Приложение "%1$s" не найдено</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="vpn_setup_failed">Не удалось настроить VPN</string>
+    <string name="app_not_found">Не удалось найти приложение %1$s</string>
     <string name="stats">Показатели</string>
     <string name="active_connections">Активные соединения</string>
-    <string name="dropped_connections">Оборванные соединения</string>
-    <string name="tot_connections">Общие соединения</string>
+    <string name="dropped_connections">Прерванные соединения</string>
+    <string name="tot_connections">Всего соединений</string>
     <string name="open_sockets">Открытые сокеты</string>
     <string name="max_file_descriptor">Максимальный ФД</string>
     <string name="bytes_sent">Байтов отправлено</string>
@@ -55,13 +55,13 @@
     <string name="dns_server">DNS сервер</string>
     <string name="apps">Приложения</string>
     <string name="pcap_file">PCAP файл</string>
-    <string name="pcap_file_info">Создать PCAP файл в хранилище устройства</string>
+    <string name="pcap_file_info">Создать PCAP файл в памяти устройства</string>
     <string name="cannot_write_file">Невозможно записать файл</string>
     <string name="share">Поделиться</string>
     <string name="delete">Удалить</string>
     <string name="ok">Хорошо</string>
-    <string name="pcap_file_action">Трафик сохранён в файл %1$s (%2$s).</string>
-    <string name="delete_error">Невозможно удалить файл</string>
+    <string name="pcap_file_action">Трафик сохранён в файл %1$s (%2$s)</string>
+    <string name="delete_error">Не удалось удалить файл</string>
     <string name="capture_running">Захват проводится</string>
     <string name="notification_msg">%1$s захвачено, %2$s соединения</string>
     <string name="proto_and_port">%1$s, %2$d</string>
@@ -70,32 +70,32 @@
     <string name="last_seen">В последний раз обнаружено</string>
     <string name="conn_status_closed">Закрыто</string>
     <string name="copy_to_clipboard">Копировать в буфер обмена</string>
-    <string name="connections_csv_fields_v1">IPПрото,IPИст,ПортИст,IpНазн,ПортНазн,Uid,Прил,Прото,Статус,Инфо,БайтОтпр,БайтПол,ПктовОтпр,ПктовПол,ВпервУвид,ПослУвид</string>
+    <string name="connections_csv_fields_v1">IPПрото,IPИст,ПортИст,IpНазн,ПортНазн,UID,Прил,Прото,Статус,Инфо,БайтОтпр,БайтПол,ПктовОтпр,ПктовПол,ВпервОбнар,ПослОбнар</string>
     <string name="save_to_file">Сохранить в файл</string>
     <string name="older_connections_notice">%1$d старых соединений не показано</string>
-    <string name="about_text">PCAPdroid это свободный инструмент захвата и отслеживания сетевого трафика, который работает без привелегий суперпользователя.</string>
+    <string name="about_text">PCAPdroid это свободный инструмент захвата и отслеживания сетевого трафика, который работает без привелегий суперпользователя</string>
     <string name="get_app">Получить его:</string>
-    <string name="tls_how_to">Как настроить TLS дешифрование</string>
+    <string name="tls_how_to">Как настроить расшифровку TLS</string>
     <string name="unknown_app">Неизвестное</string>
     <string name="enable_ipv6">Включить IPv6</string>
-    <string name="enable_ipv6_summary">Разрешить IPv6 Интернет соединения. Это следует включать только в сетях со шлюзом IPv6.</string>
+    <string name="enable_ipv6_summary">Разрешить IPv6 соединения с интернетом. Это следует включать только в сетях с IPv6 шлюзом</string>
     <string name="error">Ошибка</string>
     <string name="conn_status_unreachable">Недоступен</string>
     <string name="other_prefs">Другое</string>
     <string name="app_language">Язык приложения</string>
     <string name="lang_english">Английский</string>
-    <string name="system_default">Системный по-умолчанию</string>
+    <string name="system_default">Системный</string>
     <string name="no_activity_file_selection">Программа для взаимодействия с данным файлом не обнаружена</string>
     <string name="theme_light">Светлая</string>
     <string name="theme_dark">Тёмная</string>
     <string name="app_theme">Тема</string>
-    <string name="enable_socks5_proxy">Включить SOCKS5-прокси</string>
+    <string name="enable_socks5_proxy">Включить SOCKS5 прокси</string>
     <string name="proxy">Прокси</string>
     <string name="proxy_ip_address">IP-адрес прокси</string>
-    <string name="proxy_port">Порт Прокси</string>
-    <string name="root_capture">Захват в режиме Root</string>
+    <string name="proxy_port">Порт прокси</string>
+    <string name="root_capture">Захват в root режиме</string>
     <string name="donate">Пожертвовать</string>
-    <string name="root_log">Root-журнал</string>
+    <string name="root_log">Root журнал</string>
     <string name="request_plaintext">Запрос в чистом виде</string>
     <string name="search">Поиск…</string>
     <string name="app_val">Приложение: %1$s</string>
@@ -115,16 +115,16 @@
     <string name="installed_on">Установлено</string>
     <string name="last_update">Последнее обновление</string>
     <string name="permissions">Разрешения</string>
-    <string name="root_app_info">Системные сервисы запущенные с наивысшими привелегиями.</string>
-    <string name="netd_app_info">Системный сервис отвечающий за выполнение DNS запросов.</string>
-    <string name="android_app_info">ОС Android.</string>
-    <string name="unknown_app_info">Пометка \"Неизвестное\" присваивается соединениям, у которых не удалось определить приложение-источник.</string>
+    <string name="root_app_info">Системные сервисы запущенные с максимальными привелегиями</string>
+    <string name="netd_app_info">Системный сервис выполняющий DNS резолвинг</string>
+    <string name="android_app_info">ОС Android</string>
+    <string name="unknown_app_info">Пометка \"Неизвестное\" присваивается соединениям, у которых не удалось определить приложение-источник</string>
     <string name="packets_dropped">Отброшенные пакеты</string>
     <string name="capture_prefs">Захват трафика</string>
-    <string name="pcapdroid_trailer">PCAPdroid Trailer</string>
-    <string name="pcapdroid_trailer_summary">Trailer содержит дополнительные мета-данные, такие как название приложения и его идентификатор в системе(UID), которые будут добавлены в дамп.</string>
+    <string name="pcapdroid_trailer">PCAPdroid trailer</string>
+    <string name="pcapdroid_trailer_summary">Trailer содержит дополнительные мета-данные (такие как название приложения), которые будут добавлены в дамп</string>
     <string name="trailer_how_to">Как отобразить данные из Trailer в Wireshark</string>
-    <string name="remove_ads">Отключить рекламу</string>
+    <string name="remove_ads">Убрать рекламу</string>
     <string name="pending_transaction">Пожалуйста, завершите транзакцию для получения этой возможности</string>
     <string name="ctrl_consent">Внешнее приложение хочет начать захват трафика посредством PCAPdroid.\nЕсли вы не уверены (или это не вы), то отклоните запрос</string>
     <string name="deny">Отклонить</string>
@@ -144,7 +144,7 @@
     <string name="show_only_malicious">Вредоносные соединения</string>
     <string name="security">Безопасность</string>
     <string name="malware_detection">Обнаружение вредоносов</string>
-    <string name="malware_detection_summary">Обнаружение соединений с известными вредоносными хостами на основе использования сторонних черных списков.</string>
+    <string name="malware_detection_summary">Обнаружение соединений с известными вредоносными хостами с помощью сторонних черных списков</string>
     <string name="reset">Сбросить</string>
     <string name="malware_whitelist">Белый список вредоносов</string>
     <string name="malware_whitelist_rules">Правила игнорирования вредоносов</string>
@@ -164,7 +164,7 @@
     <string name="once">Единожды</string>
     <string name="forever">Навсегда</string>
     <string name="control_permissions">Контроль разрешений</string>
-    <string name="control_permissions_summary">Проверьте каким приложениям разрешено контролировать захват трафика через PCAPdroid.</string>
+    <string name="control_permissions_summary">Проверьте каким приложениям разрешено контролировать захват трафика через PCAPdroid</string>
     <string name="control_permissions_item">%1$s: %2$s</string>
     <string name="country">Страна</string>
     <string name="asn">ASN</string>
@@ -193,7 +193,7 @@
     <string name="update_now">Обновить сейчас</string>
     <string name="status_updating">Обновление…</string>
     <string name="malware_detection_learn_more">Узнайте больше про возможность обнаружения вредоносных соединений</string>
-    <string name="private_dns_message_notice">Частный DNS препятствует наблюдению PCAPdroid за DNS трафиком. Вы можете выключить его в сетевый настройках ОС Android.</string>
+    <string name="private_dns_message_notice">Частный DNS препятствует наблюдению PCAPdroid за DNS трафиком. Вы можете выключить его в сетевый настройках ОС Android</string>
     <string name="private_dns_hinders_detection">Частный DNS препятствует обнаружению</string>
     <string name="firewall">Файрвол</string>
     <string name="paid_features">Платные возможности</string>
@@ -216,8 +216,25 @@
     <string name="validate">Подтвердить</string>
     <string name="unlock_code">Код разблокировки</string>
     <string name="billing_failure">Не удалось подключиться к Google Play, пожалуйста повторите позже</string>
-    <string name="remove_ads_description">Отключить рекламу в приложении.</string>
+    <string name="remove_ads_description">Убирает рекламу в приложении</string>
     <string name="loading">Загрузка…</string>
     <string name="no_intent_handler_found">Не найдено приложения для выполнения этого действия</string>
-    <string name="ads_notice">Реклама в PCAPdroid генерирует траффик, идущий на внешние сервера. Вы можете отключить рекламу, купив соответствующую платную опцию.</string>
+    <string name="ads_notice">Реклама в PCAPdroid генерирует траффик, идущий на внешние сервера. Вы можете отключить рекламу, купив соответствующую платную опцию</string>
+    <string name="save_ok">Сохранено</string>
+    <string name="loading_apps">Загрузка приложений…</string>
+    <string name="file_saved_with_name">Файл сохранен как \"%1$s\"</string>
+    <string name="disconnect_vpn_confirm">Отключиться от активного VPN соединения и продолжить\?</string>
+    <string name="copied">Скопировано</string>
+    <string name="capture_not_running_status">Захват не производится</string>
+    <string name="start_capture_first">Сначала запустите захват траффика</string>
+    <string name="open_nav_drawer">Открыть боковое меню</string>
+    <string name="close_nav_drawer">Закрыть боковое меню</string>
+    <string name="root_capture_summary">Позволяет PCAPdroid работать вместе с другими VPN приложениями</string>
+    <string name="start_at_boot_summary">Автозапуск захвата после загрузки</string>
+    <string name="can_use_purchased_feature">Теперь вы можете пользоваться приобретенными возможностями</string>
+    <string name="capture_all_apps">Захватывать траффик всех приложений</string>
+    <string name="hidden_connections_help">Список правил для скрытия элементов из списка соединений, чтобы сфокусироваться только на нужном</string>
+    <string name="enable_socks5_proxy_summary">Перенаправляет все TCP соединения на указанный SOCKS5 прокси</string>
+    <string name="malware_whitelist_help">Определенный пользователем белый список для подавления обнаружения вредоносов. Удерживайте вредоносное соединение, чтобы создать правило согласно которому данное соединение не будет считаться вредоносным</string>
+    <string name="decryption_no_filter_warn">При расшифровке TLS выберите целевое приложение, чтобы избежать потери соединения с интернетом</string>
 </resources>
