--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -19,7 +19,7 @@
     <string name="protocol">Protocollo</string>
     <string name="source">Sorgente</string>
     <string name="destination">Destinazione</string>
-    <string name="bytes">Bytes</string>
+    <string name="bytes">Byte</string>
     <string name="packets">Pacchetti</string>
     <string name="duration">Durata</string>
     <string name="http_server">Server HTTP</string>
@@ -33,7 +33,7 @@
     <string name="receiver_port">Porta del collettore</string>
     <string name="dump_mode">Modalità di dump</string>
     <string name="user_guide">Guida utente</string>
-    <string name="open_telegram_group">Gruppo telegram</string>
+    <string name="open_telegram_group">Gruppo Telegram</string>
     <string name="source_code">Codice sorgente</string>
     <string name="yes">Sì</string>
     <string name="no">No</string>
@@ -41,7 +41,7 @@
     <string name="app_not_found">L\'app %1$s non è stata trovata</string>
     <string name="stats">Statistiche</string>
     <string name="active_connections">Connessioni attive</string>
-    <string name="dropped_connections">Connessioni droppate</string>
+    <string name="dropped_connections">Connessioni interrotte</string>
     <string name="tot_connections">Connessioni totali</string>
     <string name="open_sockets">Socket aperti</string>
     <string name="max_file_descriptor">FD massimo</string>
