--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -105,4 +105,136 @@
     <string name="loading_apps">Chargement des applis…</string>
     <string name="close_nav_drawer">Fermer le menu</string>
     <string name="capture_all_apps">Capturer le trafic de toutes les applications</string>
+    <string name="no_dump_info">Les PCAP ne seront pas extraits</string>
+    <string name="http_server_info">Démarrer un serveur HTTP pour le téléchargement du PCAP</string>
+    <string name="udp_exporter_info">Envoie le PCAP à un receveur UCP distant</string>
+    <string name="max_file_descriptor">Desc. fich. max</string>
+    <string name="open_sockets">Ouvrir les sockets</string>
+    <string name="http_server_port">Port du serveur HTTP</string>
+    <string name="receiver_ip_address">Adresse IP du collecteur</string>
+    <string name="receiver_port">Port du collecteur</string>
+    <string name="dump_mode">Mode d\'extraction</string>
+    <string name="pcap_file_info">Créer une fichier PCAP dans l\'espace de stockage</string>
+    <string name="enable_ipv6_summary">Autoriser les connexions internet IPv6. À n\'utiliser que sur les réseaux connecté en IPv6</string>
+    <string name="tls_how_to">Comment configurer un décryptage TLS</string>
+    <string name="get_app">L\'obtenir :</string>
+    <string name="about_text">PCAPdroid est un outil open-source de capture et de suivi de réseau qui fonctionne sans un compte administrateur</string>
+    <string name="proxy">Proxy</string>
+    <string name="proxy_port">Port de proxy</string>
+    <string name="root_capture">Capturer comme administrateur</string>
+    <string name="enable_socks5_proxy_summary">Rediriger tous les connexions TCP vers le proxy SOCKS5 spécifié</string>
+    <string name="proxy_ip_address">Adresse IP du proxy</string>
+    <string name="root_capture_summary">Autorise le lancement de PCAPdroid avec d\'autres applications de VPN</string>
+    <string name="enable_socks5_proxy">Activer le proxy SOCKS5</string>
+    <string name="capture_prefs">Capture</string>
+    <string name="packets_dropped">Paquets ignorés</string>
+    <string name="android_app_info">Le système Android</string>
+    <string name="unknown_app_info">\"Inconnu\" signale les connexions où l\'application n\'a pu être déterminée</string>
+    <string name="netd_app_info">Le démon système qui gère de la résolution DNS</string>
+    <string name="target_sdk">SDK cible</string>
+    <string name="pcapdroid_trailer_summary">Des données supplémentaires (comme le nom de l\'application) seront ajoutées aux paquets extraits</string>
+    <string name="pcapdroid_trailer">Méta-données PCAPdroid</string>
+    <string name="trailer_how_to">Comment afficher ces méta-données dans Wireshark</string>
+    <string name="ctrl_consent">Une application voudrait capturer le trafic de l\'appareil.
+\nRefusez si vous n\'est pas sûr(e)</string>
+    <string name="pending_transaction">Veuillez terminer votre transaction pour débloquer cette fonctionnalité</string>
+    <string name="ctrl_consent_title">Requête de contrôle cd PCAPdroid</string>
+    <string name="security">Sécurité</string>
+    <string name="internet">Internet</string>
+    <string name="reset">Rétablir</string>
+    <string name="capture_interface">Capturer l\'interface</string>
+    <string name="all_interfaces">Tous les interfaces</string>
+    <string name="edit_filter">Modifier le filtre</string>
+    <string name="edit_list">Modifier la liste</string>
+    <string name="ctrl_consent_denied">PCAPdroid : la requête de contrôle à été refusée</string>
+    <string name="ctrl_consent_allowed">PCAPdroid : la requête de contrôle à été accepté</string>
+    <string name="capturing_from">Capture des paquets depuis « %1$s »</string>
+    <string name="hidden_connections_rules">Règles de connexions masquées</string>
+    <string name="list_is_empty">La liste est vide</string>
+    <string name="malicious_connection_app">Connexion indésirable détectée (%1$s)</string>
+    <string name="malware_detection">Détection de virus</string>
+    <string name="malware_detection_summary">Détecte les connexions connues des listes de bannissements pour héberger des virus</string>
+    <string name="show_only_malicious">Connexions malveillantes</string>
+    <string name="copy_action">Copier…</string>
+    <string name="status_filter">Status : %1$s</string>
+    <string name="not_hidden_filter">Non masqué</string>
+    <string name="url_val">URL : %1$s</string>
+    <string name="billing_connecting">Connexion au Google Player en cours, veuillez réessayer plus tard</string>
+    <string name="feature_not_available">Cette fonctionnalité n\'est actuellement pas disponible sur votre appareil</string>
+    <string name="malware_whitelist">Virus autorisés</string>
+    <string name="malware_whitelist_rules">Règles d\'autorisation des virus</string>
+    <string name="hidden_connections_help">La liste des règles pour masquer les connexions de la liste et ainsi se concentrer sur les plus pertinentes</string>
+    <string name="malicious_connection_filter">Malveillant</string>
+    <string name="plaintext">Texte brut</string>
+    <string name="hint">Astuce</string>
+    <string name="once">Une fois</string>
+    <string name="forever">Toujours</string>
+    <string name="country">Pays</string>
+    <string name="asn">ASN</string>
+    <string name="whitelist">Autorisés</string>
+    <string name="show_only_plaintext">Connexions en clair</string>
+    <string name="show_me">M\'afficher</string>
+    <string name="control_permissions_item">%1$s : %2$s</string>
+    <string name="country_val">Pays : %1$s</string>
+    <string name="send_report">Envoyer le rapport</string>
+    <string name="control_permissions_summary">Vérifier quelles applications peuvent contrôler la capture de PCAPdroid</string>
+    <string name="malware_detection_ad0">Prêt à améliorer la sécurité de votre appareil \?</string>
+    <string name="malware_detection_ad1">Rencontrez le détecteur de virus PCAPdroid !</string>
+    <string name="control_permissions">Contrôle des autorisations</string>
+    <string name="start_at_boot">Lancer au démarrage</string>
+    <string name="start_at_boot_summary">Capturer dès le lancement</string>
+    <string name="malware_status_ok">Aucun trafic douteux détecté</string>
+    <string name="malware_status_detected">Connexions malveillantes détectées</string>
+    <string name="blacklists">Bannis</string>
+    <string name="status_outdated">Obsolète</string>
+    <string name="status_uptodate">À jour</string>
+    <string name="status_not_loaded">Non chargé</string>
+    <string name="blacklist_type">Type : %1$s</string>
+    <string name="n_rules">%1$s règles</string>
+    <string name="connections_checked">Connexions vérifiées</string>
+    <string name="blacklist_type_ip">IP bannies</string>
+    <string name="blacklist_type_domain">Domaines bannis</string>
+    <string name="last_update_val">Dernière mise à jour : %1$s</string>
+    <string name="malicious_connections">Connexions malveillantes</string>
+    <string name="updated_blacklists">Bannissements mis à jour</string>
+    <string name="status_updating">Mise à jour…</string>
+    <string name="last_blacklists_update">Dernière mise à jour</string>
+    <string name="domain_rules">Règles de domaine</string>
+    <string name="ip_rules">Règles IP</string>
+    <string name="update_now">Mettre à jour maintenant</string>
+    <string name="malware_status_update_failed">Certaines listes sont obsolètes</string>
+    <string name="malware_detection_learn_more">En apprendre plus sur la fonctionnalité de détection de virus</string>
+    <string name="private_dns_hinders_detection">Les DNS privés empêchent la détection</string>
+    <string name="private_dns_message_notice">Un DNS privé empêche PCAPdroid d\'inspecter le trafic DNS. Vous pouvez le désactiver dans les préférences réseau du système Android</string>
+    <string name="block">Bloquer…</string>
+    <string name="firewall">Par-feu</string>
+    <string name="blocked_pkts">Bloqué</string>
+    <string name="blocked_connection_filter">bloqué</string>
+    <string name="validate">Valider</string>
+    <string name="valid">Valide</string>
+    <string name="invalid">Invalide</string>
+    <string name="firewall_rules">Règles du par-feu</string>
+    <string name="paid_features">Fonctionnalités payantes</string>
+    <string name="unlock_code">Code de déverrouillage</string>
+    <string name="firewall_help">Cette liste contient des règles pour bloquer les connexions</string>
+    <string name="show_only_blocked">Bloqué par le par-feu</string>
+    <string name="no_intent_handler_found">Aucune application pour cette action</string>
+    <string name="decryption_no_filter_warn">Sélectionnez une application cible lors du décryptage TLS pour éviter de perdre votre connexion internet</string>
+    <string name="n_pkts">%1$s paq/s</string>
+    <string name="purchased">Acheté</string>
+    <string name="network_interface">Interface</string>
+    <string name="loading">Chargement…</string>
+    <string name="buy_action">Acheter</string>
+    <string name="interface_filter">Interface : %1$s</string>
+    <string name="learn_more">Plus d\'info</string>
+    <string name="no_items_for_purchase">Aucun élément à acheter</string>
+    <string name="billing_failure">Échec de connexion au Google Play. Veuillez réessayer plus tard</string>
+    <string name="remove_ads_description">Retirer les publicités dans cette application</string>
+    <string name="ads_notice">Les publicités pour les achats intégrés pour PCAPdroid génèrent du trafic vers des serveurs internes. Vous pouvez les désactiver en achetant la fonctionnalité payante</string>
+    <string name="item_redeemed">Débloqué</string>
+    <string name="capture_not_running_status">La capture n\'a pas été lancée</string>
+    <string name="copied">Copié</string>
+    <string name="can_use_purchased_feature">Vous pouvez maintenant la fonctionnalité d\'achat</string>
+    <string name="start_capture_first">Lancez d\'abord la capture</string>
+    <string name="malware_whitelist_help">Les listes utilisateur pour la détection des virus. Pressez longuement une connexion virale pour créer une nouvelle règle qui ne la détectera plus comme un virus</string>
 </resources>
