--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -76,7 +76,7 @@
     <string name="get_app">入手:</string>
     <string name="tls_how_to">TLS 復号化のセットアップ方法</string>
     <string name="unknown_app">不明</string>
-    <string name="enable_ipv6">IPv6 を有効にする</string>
+    <string name="ipv6">IPv6 を有効にする</string>
     <string name="enable_ipv6_summary">IPv6 インターネット接続を許可します。IPv6 ゲートウェイを搭載したネットワークでのみ有効にする必要があります</string>
     <string name="error">エラー</string>
     <string name="conn_status_unreachable">到達不能</string>
@@ -89,7 +89,7 @@
     <string name="theme_light">ライト</string>
     <string name="theme_dark">ダーク</string>
     <string name="app_theme">テーマ</string>
-    <string name="enable_socks5_proxy">SOCKS5 プロキシを有効にする</string>
+    <string name="socks5_proxy">SOCKS5 プロキシを有効にする</string>
     <string name="enable_socks5_proxy_summary">すべての TCP 接続を指定した SOCKS5 プロキシにリダイレクトします</string>
     <string name="proxy">プロキシ</string>
     <string name="proxy_ip_address">プロキシ IP アドレス</string>
