--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -76,7 +76,7 @@
     <string name="get_app">Получить его:</string>
     <string name="tls_how_to">Как настроить расшифровку TLS</string>
     <string name="unknown_app">Неизвестное</string>
-    <string name="enable_ipv6">Включить IPv6</string>
+    <string name="ipv6">Включить IPv6</string>
     <string name="enable_ipv6_summary">Разрешить IPv6 соединения с интернетом. Это следует включать только в сетях с IPv6 шлюзом</string>
     <string name="error">Ошибка</string>
     <string name="conn_status_unreachable">Недоступен</string>
@@ -88,7 +88,7 @@
     <string name="theme_light">Светлая</string>
     <string name="theme_dark">Тёмная</string>
     <string name="app_theme">Тема</string>
-    <string name="enable_socks5_proxy">Включить SOCKS5 прокси</string>
+    <string name="socks5_proxy">Включить SOCKS5 прокси</string>
     <string name="proxy">Прокси</string>
     <string name="proxy_ip_address">IP-адрес прокси</string>
     <string name="proxy_port">Порт прокси</string>
