--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -100,7 +100,7 @@
     <string name="pcap_file">Fichier PCAP</string>
     <string name="remove_ads">Retirer les pubs</string>
     <string name="disconnect_vpn_confirm">Déconnecter l\'application RPV active et continuer \?</string>
-    <string name="enable_ipv6">Activer IPv6</string>
+    <string name="ipv6">Activer IPv6</string>
     <string name="version">Version</string>
     <string name="loading_apps">Chargement des applis…</string>
     <string name="close_nav_drawer">Fermer le menu</string>
@@ -125,7 +125,7 @@
     <string name="enable_socks5_proxy_summary">Rediriger tous les connexions TCP vers le proxy SOCKS5 spécifié</string>
     <string name="proxy_ip_address">Adresse IP du proxy</string>
     <string name="root_capture_summary">Autorise le lancement de PCAPdroid avec d\'autres applications de VPN</string>
-    <string name="enable_socks5_proxy">Activer le proxy SOCKS5</string>
+    <string name="socks5_proxy">Activer le proxy SOCKS5</string>
     <string name="capture_prefs">Capture</string>
     <string name="packets_dropped">Paquets ignorés</string>
     <string name="android_app_info">Le système Android</string>
