--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -76,7 +76,7 @@
     <string name="get_app">Scaricala:</string>
     <string name="tls_how_to">Come impostare la decrittazione TLS</string>
     <string name="unknown_app">Sconosciuta</string>
-    <string name="enable_ipv6">Abilita IPv6</string>
+    <string name="ipv6">Abilita IPv6</string>
     <string name="enable_ipv6_summary">Permetti connessioni internet IPv6. Da abilitare soltanto in reti con gateway IPv6</string>
     <string name="error">Errore</string>
     <string name="conn_status_unreachable">Non raggiungibile</string>
@@ -88,7 +88,7 @@
     <string name="theme_light">Chiaro</string>
     <string name="theme_dark">Scuro</string>
     <string name="app_theme">Tema</string>
-    <string name="enable_socks5_proxy">Abilita proxy SOCKS5</string>
+    <string name="socks5_proxy">Abilita proxy SOCKS5</string>
     <string name="proxy">Proxy</string>
     <string name="proxy_ip_address">Indirizzo IP del proxy</string>
     <string name="proxy_port">Porta del proxy</string>
