--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,15 +1,15 @@
-<resources>        
-
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <!-- Localized -->
     <string name="start_button">Iniciar</string>
     <string name="stop_button">Parar</string>
     <string name="title_activity_settings">Configurações</string>
-    <string name="collector_info">Receptor de UDP: %1$s:%2$d</string>
+    <string name="collector_info">Coletor UDP: %1$s:%2$d</string>
     <string name="http_server_status">Servidor HTTP: http://%1$s:%2$d</string>
     <string name="rcvd_and_sent">%1$s recebidos — %2$s enviados</string>
     <string name="query">Consulta</string>
     <string name="host">Host</string>
-    <string name="app_filter">Filtrar app desejado</string>
+    <string name="app_filter">App desejado</string>
     <string name="ready">Pronto</string>
     <string name="about">Sobre</string>
     <string name="status">Status</string>
@@ -23,83 +23,83 @@
     <string name="bytes">Bytes</string>
     <string name="packets">Pacotes</string>
     <string name="duration">Duração</string>
-    <string name="http_server">Servidor de HTTP</string>
-    <string name="udp_exporter">Exportador de UDP</string>
+    <string name="http_server">Servidor HTTP</string>
+    <string name="udp_exporter">Exportador UDP</string>
     <string name="no_dump">Nenhum</string>
-    <string name="no_dump_info">Dados brutos de PCAP não serão disponíveis</string>
-    <string name="http_server_info">Inicia um servidor de HTTP para o download de PCAP</string>
+    <string name="no_dump_info">Dados brutos do PCAP não serão disponíveis</string>
+    <string name="http_server_info">Inicia um servidor HTTP para o download do PCAP</string>
     <string name="udp_exporter_info">Envia o PCAP para um receptor UDP remoto</string>
     <string name="http_server_port">Porta do servidor HTTP</string>
-    <string name="receiver_ip_address">Endereço IP do receptor</string>
-    <string name="receiver_port">Porta do receptor</string>
+    <string name="receiver_ip_address">Endereço IP do coletor</string>
+    <string name="receiver_port">Porta do coletor</string>
     <string name="dump_mode">Modo de dados brutos</string>
-    <string name="user_guide">Guia do Usuário</string>
+    <string name="user_guide">Manual do usuário</string>
     <string name="open_telegram_group">Grupo no Telegram</string>
-    <string name="source_code">Código fonte</string>
-    <string name="yes">SIM</string>
-    <string name="no">NÃO</string>
+    <string name="source_code">Código-fonte</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
     <string name="vpn_setup_failed">Configuração da VPN falhou</string>
-    <string name="app_not_found">O "%1$s" app não foi encontrado</string>
+    <string name="app_not_found">O app %1$s não foi encontrado</string>
     <string name="stats">Estatísticas</string>
     <string name="active_connections">Conexões ativas</string>
     <string name="dropped_connections">Conexões interrompidas</string>
-    <string name="tot_connections">Total das conexões</string>
+    <string name="tot_connections">Total de conexões</string>
     <string name="open_sockets">Sockets abertos</string>
-    <string name="max_file_descriptor">Max FD</string>
+    <string name="max_file_descriptor">Máx. FD</string>
     <string name="bytes_sent">Bytes enviados</string>
     <string name="bytes_rcvd">Bytes recebidos</string>
     <string name="packets_sent">Pacotes enviados</string>
     <string name="packets_rcvd">Pacotes recebidos</string>
-    <string name="dns_queries">Consultas de DNS</string>
+    <string name="dns_queries">Consultas DNS</string>
     <string name="search_apps">Procurar apps</string>
     <string name="no_apps">Nenhum app</string>
-    <string name="dns_server">Servidor de DNS</string>
+    <string name="dns_server">Servidor DNS</string>
     <string name="apps">Apps</string>
     <string name="pcap_file">Arquivo PCAP</string>
-    <string name="pcap_file_info">Criar um arquivo PCAP no armazenamento do dispositivo</string>
+    <string name="pcap_file_info">Cria um arquivo PCAP no armazenamento do dispositivo</string>
     <string name="cannot_write_file">Não foi possível escrever em arquivo</string>
     <string name="share">Compartilhar</string>
     <string name="delete">Excluir</string>
     <string name="ok">OK</string>
-    <string name="pcap_file_action">Tráfego salvo em arquivo %1$s (%2$s).</string>
-    <string name="delete_error">Não foi possível excluir o arquivo</string>
-    <string name="capture_running">Captura em andamento</string>
+    <string name="pcap_file_action">Tráfego salvo em arquivo \"%1$s\" (%2$s)</string>
+    <string name="delete_error">Não foi possível remover o arquivo</string>
+    <string name="capture_running">Captura executada</string>
     <string name="notification_msg">%1$s capturados, %2$s conexões</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Aberto</string>
-    <string name="first_seen">Visto primeiro</string>
-    <string name="last_seen">Visto último</string>
+    <string name="first_seen">Começou</string>
+    <string name="last_seen">Última atividade</string>
     <string name="conn_status_closed">Fechado</string>
     <string name="copy_to_clipboard">Copiar ao Clipboard</string>
     <string name="save_to_file">Salvar em arquivo</string>
     <string name="older_connections_notice">%1$d conexões mais antigas não mostradas</string>
-    <string name="about_text">PCAPdroid é uma ferramenta de captura e monitoramento de rede de software livre que funciona sem acesso Root.</string>
-    <string name="get_app">Obtenha-o:</string>
-    <string name="tls_how_to">Como configurar a decriptação de TLS</string>
+    <string name="about_text">PCAPdroid é uma ferramenta de software livre de captura e monitoramento de rede que funciona sem acesso root</string>
+    <string name="get_app">Baixar:</string>
+    <string name="tls_how_to">Como configurar decriptação de TLS</string>
     <string name="unknown_app">Desconhecido</string>
     <string name="enable_ipv6">Ativar IPv6</string>
-    <string name="enable_ipv6_summary">Permitir conexões de IPv6. Só deve ser usado em redes com um Gateway ao IPv6.</string>
+    <string name="enable_ipv6_summary">Permitir conexões IPv6. Deveria usar apenas em redes com um gateway IPv6</string>
     <string name="error">Erro</string>
     <string name="conn_status_unreachable">Inacessível</string>
     <string name="other_prefs">Outro</string>
-    <string name="app_language">Idioma do App</string>
+    <string name="app_language">Idioma do app</string>
     <string name="lang_english">Inglês</string>
-    <string name="system_default">Padrão do sistema</string>
+    <string name="system_default">Sistema</string>
     <string name="no_activity_file_selection">Não foi encontrado nenhum app de seleção de arquivos</string>
     <string name="theme_light">Claro</string>
     <string name="theme_dark">Escuro</string>
     <string name="app_theme">Tema</string>
-    <string name="enable_socks5_proxy">Ativar Proxy de SOCKS5</string>
+    <string name="enable_socks5_proxy">Ativar proxy SOCKS5</string>
     <string name="proxy">Proxy</string>
-    <string name="proxy_ip_address">Endereço IP de Proxy</string>
-    <string name="proxy_port">Porta de Proxy</string>
-    <string name="root_capture">Capturar via Root</string>
+    <string name="proxy_ip_address">Endereço IP de proxy</string>
+    <string name="proxy_port">Porta de proxy</string>
+    <string name="root_capture">Capturar como root</string>
     <string name="donate">Doar</string>
-    <string name="root_log">Registro via Root</string>
-    <string name="request_plaintext">Solicitação em texto puro</string>
-    <string name="search">Pesquisa…</string>
+    <string name="root_log">Registro root</string>
+    <string name="request_plaintext">Solicite em texto puro</string>
+    <string name="search">Pesquisar…</string>
     <string name="app_val">App: %1$s</string>
-    <string name="ip_address_val">Endereço de IP: %1$s</string>
+    <string name="ip_address_val">Endereço IP: %1$s</string>
     <string name="host_val">Host: %1$s</string>
     <string name="protocol_val">Protocolo: %1$s</string>
     <string name="whitelist_action">Autorizar…</string>
@@ -110,30 +110,132 @@
     <string name="uid">UID</string>
     <string name="app_name">Nome</string>
     <string name="version">Versão</string>
-    <string name="target_sdk">Nível alvo SDK</string>
+    <string name="target_sdk">SDK alvo</string>
     <string name="installed_on">Instalado em</string>
     <string name="last_update">Última atualização</string>
     <string name="permissions">Permissões</string>
-    <string name="root_app_info">Serviços do sistema (em segundo plano) estão funcionando com privilégios máximos.</string>
-    <string name="netd_app_info">O serviço do sistema que realiza as resoluções de DNS.</string>
-    <string name="android_app_info">O sistema do Android.</string>
-    <string name="unknown_app_info">O \"Desconhecido\" está atribuído a conexões para as quais o app da fonte não pôde ser identificado</string>
+    <string name="root_app_info">Os daemons do sistema estão funcionando com privilégios máximos</string>
+    <string name="netd_app_info">Daemon de sistema que realiza as resoluções do DNS</string>
+    <string name="android_app_info">O sistema do Android</string>
+    <string name="unknown_app_info">\"Desconhecido\" indica as conexões de app qual não podia ser determinado</string>
     <string name="packets_dropped">Pacotes desconsiderados</string>
     <string name="capture_prefs">Capturar</string>
-    <string name="pcapdroid_trailer">Metadados adicionais de PCAPdroid</string>
-    <string name="pcapdroid_trailer_summary">Um Trailer contém metadados complementares, como o nome do app, que serão adicionados aos dados brutos.</string>
-    <string name="trailer_how_to">Como exibir os dados do Trailer em Wireshark</string>
+    <string name="pcapdroid_trailer">Metadados adicionais do PCAPdroid</string>
+    <string name="pcapdroid_trailer_summary">Um trailer contém metadados complementares como o nome do app, que serão adicionados aos dados brutos</string>
+    <string name="trailer_how_to">Como exibir os dados do trailer em Wireshark</string>
     <string name="remove_ads">Remover anúncios</string>
     <string name="pending_transaction">Por favor, finalize sua transação para liberar esta funcionalidade</string>
-    <string name="ctrl_consent">Um app quer capturar o tráfego em seu dispositivo.\nSe não tiver certeza, negá-lo</string>
-    <string name="deny">Negar</string>
+    <string name="ctrl_consent">Um app quer capturar o tráfego no seu dispositivo.
+\nSe não tiver certeza, melhor recusar</string>
+    <string name="deny">Recusar</string>
     <string name="allow">Permitir</string>
-    <string name="ctrl_consent_title">Pedido de controle do PCAPdroid</string>
-    <string name="ctrl_consent_denied">PCAPdroid: o pedido de controle foi negado</string>
-    <string name="ctrl_consent_allowed">PCAPdroid: o pedido de controle foi permitido</string>
+    <string name="ctrl_consent_title">PCAPdroid solicitação de controle</string>
+    <string name="ctrl_consent_denied">PCAPdroid: a solicitação de controle foi negado</string>
+    <string name="ctrl_consent_allowed">PCAPdroid: a solicitação de controle foi concedido</string>
     <string name="capture_interface">Interface de captura</string>
     <string name="internet">Internet</string>
-    <string name="all_interfaces">Todas as Interfaces</string>
+    <string name="all_interfaces">Todas as interfaces</string>
     <string name="capturing_from">Capturando pacotes de \"%1$s\"</string>
-
+    <string name="root_capture_summary">Permitir o PCAPdroid funcionar com outros apps de VPN</string>
+    <string name="hide">Ocultar…</string>
+    <string name="edit_filter">Editar filtro</string>
+    <string name="edit_list">Editar lista</string>
+    <string name="hidden_connections_rules">Regras de conexões ocultas</string>
+    <string name="list_is_empty">A lista está vazia</string>
+    <string name="malicious_connection_app">Conexão maliciosa detectada (%1$s)</string>
+    <string name="show_only_malicious">Conexão maliciosa</string>
+    <string name="security">Segurança</string>
+    <string name="malware_detection">Detecção de malware</string>
+    <string name="reset">Resetar</string>
+    <string name="malware_whitelist">Lista branca de malware</string>
+    <string name="malware_whitelist_rules">Regras da lista branca de malware</string>
+    <string name="feature_not_available">Esta funcionalidade está atualmente indisponível para seu dispositivo</string>
+    <string name="billing_connecting">A conexão com Google Play está em andamento, por favor, tente novamente daqui a pouco</string>
+    <string name="malware_whitelist_help">Lista branca definida pelo usuário para impedir a detecção de malware. Faça clique longo em Conexões maliciosas para criar regras desmarcando-as como nocivas</string>
+    <string name="hidden_connections_help">Lista de regras para ocultar as entradas na lista de conexões a fim de considerar apenas relevantes</string>
+    <string name="not_hidden_filter">Não oculto</string>
+    <string name="copy_action">Copiar…</string>
+    <string name="url_val">URL: %1$s</string>
+    <string name="malware_detection_ad1">Conheça a detecção de malware do PCAPdroid!</string>
+    <string name="show_me">Mostre-me</string>
+    <string name="hint">Dica</string>
+    <string name="once">Uma vez</string>
+    <string name="forever">Sempre</string>
+    <string name="control_permissions">Permissões de controle</string>
+    <string name="control_permissions_summary">Verifique quais apps são permitidos para controlar a captura PCAPdroid</string>
+    <string name="control_permissions_item">%1$s: %2$s</string>
+    <string name="country">País</string>
+    <string name="asn">ASN</string>
+    <string name="country_val">País: %1$s</string>
+    <string name="malware_status_detected">Conexões maliciosas detectadas</string>
+    <string name="blacklists">Lista negra</string>
+    <string name="status_outdated">Desatualizado</string>
+    <string name="status_not_loaded">Não carregado</string>
+    <string name="status_uptodate">Atualizado</string>
+    <string name="blacklist_type">Tipo: %1$s</string>
+    <string name="blacklist_type_domain">Lista negra de domínios</string>
+    <string name="last_update_val">Última atualização: %1$s</string>
+    <string name="malicious_connections">Conexões maliciosas</string>
+    <string name="updated_blacklists">Lista negra atualizada</string>
+    <string name="connections_checked">Conexões verificadas</string>
+    <string name="last_blacklists_update">Última atualização</string>
+    <string name="domain_rules">Regras de domínio</string>
+    <string name="ip_rules">Regras de IPs</string>
+    <string name="malware_status_update_failed">Algumas listas negras estão desatualizadas</string>
+    <string name="update_now">Atualizar agora</string>
+    <string name="status_updating">Atualizando…</string>
+    <string name="malware_detection_learn_more">Saiba mais sobre o recurso de detecção de malware</string>
+    <string name="firewall">Firewall</string>
+    <string name="firewall_rules">Regras do Firewall</string>
+    <string name="firewall_help">Esta lista contém regras para bloquear conexões</string>
+    <string name="blocked_pkts">Bloqueado</string>
+    <string name="n_pkts">%1$s pcts</string>
+    <string name="show_only_blocked">Bloqueado por firewall</string>
+    <string name="blocked_connection_filter">bloqueado</string>
+    <string name="paid_features">Funcionalidade não gratuitas</string>
+    <string name="unlock_code">Código de desbloqueio</string>
+    <string name="validate">Validar</string>
+    <string name="interface_filter">Interface: %1$s</string>
+    <string name="loading">Carregando…</string>
+    <string name="capture_not_running_status">A captura não está funcionando</string>
+    <string name="start_capture_first">Comece a captura primeiro</string>
+    <string name="copied">Copiado</string>
+    <string name="can_use_purchased_feature">Agora você pode usar o recurso adquirido</string>
+    <string name="disconnect_vpn_confirm">Desconectar o app da VPN ativo e continuar\?</string>
+    <string name="loading_apps">Carregando os apps…</string>
+    <string name="open_nav_drawer">Abrir menu</string>
+    <string name="close_nav_drawer">Fechar menu</string>
+    <string name="capture_all_apps">Capturar o tráfego de todos os apps</string>
+    <string name="save_ok">Salvo</string>
+    <string name="malicious_connection_filter">Malicioso</string>
+    <string name="status_filter">Status: %1$s</string>
+    <string name="file_saved_with_name">Arquivo salvo como \"%1$s\"</string>
+    <string name="enable_socks5_proxy_summary">Redirecionar todas as conexões TCP para o proxy SOCKS5 especificado</string>
+    <string name="malware_detection_summary">Detectar as conexões com hosts maliciosos conhecidos através de lista negra de terceiros</string>
+    <string name="show_only_plaintext">Conexões em texto puro</string>
+    <string name="plaintext">Texto puro</string>
+    <string name="malware_detection_ad0">Pronto para aumentar a segurança em seu dispositivo\?</string>
+    <string name="send_report">Enviar relatório</string>
+    <string name="start_at_boot">Executar ao iniciar</string>
+    <string name="start_at_boot_summary">Auto-executar a captura após reinício</string>
+    <string name="malware_status_ok">Nenhum tráfego malicioso detectado</string>
+    <string name="whitelist">Lista branca</string>
+    <string name="blacklist_type_ip">Lista negra de IPs</string>
+    <string name="n_rules">%1$s regras</string>
+    <string name="private_dns_message_notice">O DNS privado impede que o PCAPdroid inspecione o tráfego de DNS. Você pode desligá-lo em configurações da rede no Android</string>
+    <string name="private_dns_hinders_detection">O DNS privado impede a detecção</string>
+    <string name="decryption_no_filter_warn">Selecione um app alvo ao descriptografar o TLS para evitar a perda da sua conexão com a Internet</string>
+    <string name="block">Bloquear…</string>
+    <string name="valid">Válido</string>
+    <string name="invalid">Inválido</string>
+    <string name="no_intent_handler_found">Nenhum app encontrado para realizar esta ação</string>
+    <string name="network_interface">Interface</string>
+    <string name="billing_failure">Não foi possível conectar-se ao Google Play. Por favor, tente novamente daqui a pouco</string>
+    <string name="learn_more">Saiba mais</string>
+    <string name="purchased">Adquirido</string>
+    <string name="no_items_for_purchase">Nenhum item disponível para compra</string>
+    <string name="buy_action">Comprar</string>
+    <string name="remove_ads_description">Remover anúncios deste app</string>
+    <string name="ads_notice">Anúncios dentro do PCAPdroid geram tráfego para servidores externos. Você pode remover os anúncios fazendo a compra</string>
+    <string name="item_redeemed">Resgatar</string>
 </resources>
